-remove dynop myop (TT #450); migrate obscure from regular to dynop. (partial TT #449)
-lack of existing tests for dynops, and more regimented test conditions force us to todo a codingstd test.



git-svn-id: https://svn.parrot.org/parrot/trunk@39944 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/config/gen/makefiles/dynoplibs.in
+++ b/config/gen/makefiles/dynoplibs.in
@@ -25,10 +25,10 @@ INCLUDES        := -I$(BUILD_DIR)@slash@include -I@build_dir@@slash@src@slash@pm
 LINKARGS        := $(LDFLAGS) $(LD_LOAD_FLAGS) $(LIBPARROT) @icu_shared@ @libs@
 
 OPS_TARGETS := \
-#IF(cg_flag):  myops_ops_cg$(LOAD_EXT) \
-#IF(cg_flag):  myops_ops_cgp$(LOAD_EXT) \
-  myops_ops$(LOAD_EXT) \
-  myops_ops_switch$(LOAD_EXT)
+#IF(cg_flag):  obscure_ops_cg$(LOAD_EXT) \
+#IF(cg_flag):  obscure_ops_cgp$(LOAD_EXT) \
+  obscure_ops$(LOAD_EXT) \
+  obscure_ops_switch$(LOAD_EXT)
 
 CLEANUPS := \
   "*.c" \
@@ -51,41 +51,41 @@ all : $(OPS_TARGETS)
 Makefile: ../../config/gen/makefiles/dynoplibs.in
 	cd $(BUILD_DIR) && $(RECONFIGURE) --step=gen::makefiles --target=src/dynoplibs/Makefile
 
-myops_ops$(LOAD_EXT): myops_ops$(O)
-	$(LD) $(LD_OUT)myops_ops$(LOAD_EXT) myops_ops$(O) $(LINKARGS)
+obscure_ops$(LOAD_EXT): obscure_ops$(O)
+	$(LD) $(LD_OUT)obscure_ops$(LOAD_EXT) obscure_ops$(O) $(LINKARGS)
 
-myops_ops$(O): myops_ops.c
-	$(CC) $(CC_OUT)myops_ops$(O) $(INCLUDES) $(CFLAGS) myops_ops.c
+obscure_ops$(O): obscure_ops.c
+	$(CC) $(CC_OUT)obscure_ops$(O) $(INCLUDES) $(CFLAGS) obscure_ops.c
 
-myops_ops.c: myops.ops
-	$(OPS2C) C --dynamic myops.ops
+obscure_ops.c: obscure.ops
+	$(OPS2C) C --dynamic obscure.ops
 
-myops_ops_switch$(LOAD_EXT): myops_ops_switch$(O)
-	$(LD) $(LD_OUT)myops_ops_switch$(LOAD_EXT) myops_ops_switch$(O) $(LINKARGS)
+obscure_ops_switch$(LOAD_EXT): obscure_ops_switch$(O)
+	$(LD) $(LD_OUT)obscure_ops_switch$(LOAD_EXT) obscure_ops_switch$(O) $(LINKARGS)
 
-myops_ops_switch$(O): myops_ops_switch.c
-	$(CC) $(CC_OUT)myops_ops_switch$(O) $(INCLUDES) $(CFLAGS) myops_ops_switch.c
+obscure_ops_switch$(O): obscure_ops_switch.c
+	$(CC) $(CC_OUT)obscure_ops_switch$(O) $(INCLUDES) $(CFLAGS) obscure_ops_switch.c
 
-myops_ops_switch.c: myops.ops
-	$(OPS2C) CSwitch --dynamic myops.ops
+obscure_ops_switch.c: obscure.ops
+	$(OPS2C) CSwitch --dynamic obscure.ops
 
-myops_ops_cg$(LOAD_EXT): myops_ops_cg$(O)
-	$(LD) $(LD_OUT)myops_ops_cg$(LOAD_EXT) myops_ops_cg$(O) $(LINKARGS)
+obscure_ops_cg$(LOAD_EXT): obscure_ops_cg$(O)
+	$(LD) $(LD_OUT)obscure_ops_cg$(LOAD_EXT) obscure_ops_cg$(O) $(LINKARGS)
 
-myops_ops_cg$(O): myops_ops_cg.c
-	$(CC) $(CC_OUT)myops_ops_cg$(O) $(INCLUDES) $(CFLAGS) myops_ops_cg.c
+obscure_ops_cg$(O): obscure_ops_cg.c
+	$(CC) $(CC_OUT)obscure_ops_cg$(O) $(INCLUDES) $(CFLAGS) obscure_ops_cg.c
 
-myops_ops_cg.c: myops.ops
-	$(OPS2C) CGoto --dynamic myops.ops
+obscure_ops_cg.c: obscure.ops
+	$(OPS2C) CGoto --dynamic obscure.ops
 
-myops_ops_cgp$(LOAD_EXT): myops_ops_cgp$(O)
-	$(LD) $(LD_OUT)myops_ops_cgp$(LOAD_EXT) myops_ops_cgp$(O) $(LINKARGS)
+obscure_ops_cgp$(LOAD_EXT): obscure_ops_cgp$(O)
+	$(LD) $(LD_OUT)obscure_ops_cgp$(LOAD_EXT) obscure_ops_cgp$(O) $(LINKARGS)
 
-myops_ops_cgp$(O): myops_ops_cgp.c
-	$(CC) $(CC_OUT)myops_ops_cgp$(O) $(INCLUDES) $(CFLAGS) myops_ops_cgp.c
+obscure_ops_cgp$(O): obscure_ops_cgp.c
+	$(CC) $(CC_OUT)obscure_ops_cgp$(O) $(INCLUDES) $(CFLAGS) obscure_ops_cgp.c
 
-myops_ops_cgp.c: myops.ops
-	$(OPS2C) CGP --dynamic myops.ops
+obscure_ops_cgp.c: obscure.ops
+	$(OPS2C) CGP --dynamic obscure.ops
 
 test : all
 	cd ../.. && $(PERL) -Ilib t/harness t/dynoplibs/*.t
