[install] Add an 'installed' flag to the two versions of the frozen parrot config data so languages and pbc_to_exe can easily make build decisions. Part of fix for TT #495.
git-svn-id: https://svn.parrot.org/parrot/trunk@39993 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/config/gen/config_pm/config_lib_pasm.in
+++ b/config/gen/config_pm/config_lib_pasm.in
@@ -18,7 +18,12 @@ no_arg:
     if I11, is_install
     set S1, "@PWD@"
     set P0["prefix"], S1
+    set P0["installed"], "0"
+    branch freeze_config
 is_install:
+    set P0["installed"], "1"
+freeze_config:
+
     freeze S0, P0
     print S0
     end
