[build] files generated by Configure.pl must be removed only by target 'realclean'
See original ticket #383

git-svn-id: https://svn.parrot.org/parrot/trunk@40045 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/config/gen/makefiles/dynpmc.in
+++ b/config/gen/makefiles/dynpmc.in
@@ -67,10 +67,6 @@ OBJS_DIGEST := \
 #ELSIF(win32):LIB_CRYPTO := libcrypto.lib
 #ELSE:LIB_CRYPTO := -lcrypto
 
-# some *.pmc file are generated
-GEN_PMC_DEFINITIONS := \
-#IF(has_crypto):  $(PMCS_DIGEST)
-
 CLEANUPS := \
   "*.c" \
   "pmc_*.h" \
@@ -272,7 +268,7 @@ clean :
 	$(RM_F) $(CLEANUPS)
 
 realclean:
-	$(RM_F)  $(CLEANUPS) Makefile $(GEN_PMC_DEFINITIONS)
+	$(RM_F) $(CLEANUPS) Makefile
 
 distclean: realclean
 
