[install] Use configured path for library instead of prefix plus hardcoded 'lib/', which doesn't allow for platform variations. Applying TT #739. Thanks to Gerd Pokorra.
git-svn-id: https://svn.parrot.org/parrot/trunk@40097 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/config/gen/config_pm/config_pir.in
+++ b/config/gen/config_pm/config_pir.in
@@ -49,7 +49,7 @@ undefined values) is undefined, and may be rather funky.
     $S0 = concat prefix, "/runtime"
     $I0 = stat $S0, .STAT_EXISTS
     if $I0 goto L1
-    conf_file = prefix . "/lib@versiondir@/include/config.fpmc"
+    conf_file = "@libdir@@versiondir@/include/config.fpmc"
     goto L2
   L1:
     conf_file = prefix . "/runtime/parrot/include/config.fpmc"
