[lib] Fix SDL font color, TT #798, richardh++
git-svn-id: https://svn.parrot.org/parrot/trunk@40110 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/config/gen/call_list/misc.in
+++ b/config/gen/call_list/misc.in
@@ -227,6 +227,8 @@ i    ppl
 v    pip
 p    pti
 i    ppp
+# added by RNH for the RenderXXX_XXXX text routines 
+p    ptii
 
 # Used by SDL::Font
 p    ti
