--- a/tools/util/release.json
+++ b/tools/util/release.json
@@ -1,9 +1,9 @@
 {
-    "release.version"  : "1.3.0",
-    "release.name"     : "Andean Swift",
+    "release.version"  : "1.4.0",
+    "release.name"     : "Mundo Cani",
     "release.day"      : "Tuesday",
-    "release.date"     : "16 June 2009",
-    "release.nextdate" : "21 July 2009",
+    "release.date"     : "21 July 2009",
+    "release.nextdate" : "18 August 2009",
 
     "web.root"         : "http://parrot.org/",
     "web.source"       : "download",
@@ -11,13 +11,13 @@
     "web.repository"   : "https://svn.parrot.org/parrot/trunk/",
 
     "bugday.day"       : "Saturday",
-    "bugday.date"      : "18 July 2009",
+    "bugday.date"      : "15 August 2009",
 
     "wiki.root"        : "https://trac.parrot.org/parrot/wiki/",
-    "wiki.bugday"      : "bug_day_2009_07_18",
+    "wiki.bugday"      : "bug_day_2009_08_15",
 
     "cpan.search"      : "http://search.cpan.org/dist/parrot",
-    "ftp.path"         : "ftp://ftp.parrot.org/pub/parrot/releases/devel/1.3.0/",
+    "ftp.path"         : "ftp://ftp.parrot.org/pub/parrot/releases/devel/1.4.0/",
     "subversion.root"  : "http://subversion.tigris.org/",
     "svk.root"         : "http://svk.bestpractical.com/"
 }
