--- a/ports/debian/parrot-devel.install.in
+++ b/ports/debian/parrot-devel.install.in
@@ -2,6 +2,7 @@ usr/bin/parrot_debugger
 usr/bin/pbc_disassemble
 usr/bin/pbc_dump
 usr/bin/pbc_merge
+usr/bin/pbc_to_exe
 usr/bin/parrot_config
 usr/lib/parrot/@VERSION@/tools/*
 usr/lib/parrot/@VERSION@/languages/nqp/*
@@ -19,5 +20,6 @@ usr/lib/parrot/@VERSION@/library/PGE/*
 usr/lib/parrot/@VERSION@/languages/tge/*
 usr/lib/parrot/@VERSION@/library/TGE.pbc
 usr/lib/parrot/@VERSION@/VERSION
+usr/lib/parrot/@VERSION@/parrot_config.o
 usr/include/parrot/@VERSION@/pmc/*
 usr/src/parrot/@VERSION@/*
