--- a/examples/embed/Makefile.msvc
+++ b/examples/embed/Makefile.msvc
@@ -17,17 +17,17 @@ LDFLAGS = $(PARROT_PREFIX)\libparrot.lib
 O 	= .obj
 EXE 	= .exe
 
-all: lorito$(EXE)
+all: cotorra$(EXE)
 
 #-----------------------------------------------------------------------
 
-lorito$(O): lorito.c
-	$(CC) $(CCFLAGS) -c -I $(INCLUDEDIR) lorito.c
+cotorra$(O): cotorra.c
+	$(CC) $(CCFLAGS) -c -I $(INCLUDEDIR) cotorra.c
 
-lorito$(EXE): lorito$(O)
-	$(LD) -out:lorito$(EXE) lorito$(O) $(LDFLAGS)
+cotorra$(EXE): cotorra$(O)
+	$(LD) -out:cotorra$(EXE) cotorra$(O) $(LDFLAGS)
 
 #-----------------------------------------------------------------------
 
 clean:
-	rm -f lorito$(EXE) lorito$(O)
+	rm -f cotorra$(EXE) cotorra$(O)
