[build] Alter 'coretest' target so it only builds and tests the core vm. Add a 'corevm' target as a subset of the 'all' target that only builds the core vm. The default build target is still 'all'.
git-svn-id: https://svn.parrot.org/parrot/trunk@40512 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/config/gen/makefiles/root.in
+++ b/config/gen/makefiles/root.in
@@ -585,17 +585,9 @@ MAKE := @make_c@
 ###############################################################################
 
 all : \
-    flags_dummy \
-    PARROT_LIBS \
-    $(PARROT) \
-    runtime/parrot/include/parrotlib.pbc \
-    runtime/parrot/include/config.fpmc \
+    corevm \
     docs \
-    $(LIBNCI_TEST_SO) \
 #IF(has_glut):    $(LIBGLUTCB_SO) \
-    $(GEN_LIBRARY) \
-    dynpmc \
-    dynoplibs \
     compilers \
     $(DIS) \
     $(PARROT_CONFIG) \
@@ -603,6 +595,17 @@ all : \
     $(PBCMERGE) \
     $(PDB) \
     $(PDUMP) \
+
+corevm : \
+    flags_dummy \
+    PARROT_LIBS \
+    $(PARROT) \
+    runtime/parrot/include/parrotlib.pbc \
+    runtime/parrot/include/config.fpmc \
+    $(LIBNCI_TEST_SO) \
+    $(GEN_LIBRARY) \
+    dynpmc \
+    dynoplibs \
 
 $(GEN_LIBRARY) : $(PARROT)
 
@@ -1506,7 +1509,7 @@ smolder_coretest : test_prep
 smoke : smolder_test
 
 # "core tests" -- test basic functionality but not ancillaries
-coretest : test_prep
+coretest : corevm
 	$(PERL) t/harness $(EXTRA_TEST_ARGS) --core-tests
 
 # automake compatibility
