[t] delete t/dynpmc/*.pbc as part of test-clean, mikehh++ for noticing
git-svn-id: https://svn.parrot.org/parrot/trunk@40719 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/config/gen/makefiles/root.in
+++ b/config/gen/makefiles/root.in
@@ -1771,6 +1771,7 @@ test-clean :
     "t/op/*.pbc" \
     "t/oo/*.pbc" \
     "t/pmc/*.pbc" \
+    "t/dynpmc/*.pbc" \
     "t/stress/*.pbc" \
     "t/tools/*.pbc"
 	$(RM_F) \
